--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-spring/web": "^10.0.3",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
